c1/search
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1171:24: error: use of undeclared identifier 'search_rc_index'
if ( captured != 13 && search_rc_index[captured] == search_rc_index[path[v9].captured] ) 
                       ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1171:53: error: use of undeclared identifier 'search_rc_index'
if ( captured != 13 && search_rc_index[captured] == search_rc_index[path[v9].captured] ) 
                                                    ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1480:12: error: expected expression
*( _OWORD *)( ( char *)&killer3[299].from + 3 * v50) = *( _OWORD *)&v124[v52].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1480:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&killer3[299].from + 3 * v50) = *( _OWORD *)&v124[v52].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1480:67: error: expected expression
*( _OWORD *)( ( char *)&killer3[299].from + 3 * v50) = *( _OWORD *)&v124[v52].from; 
                                                                  ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1480:59: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&killer3[299].from + 3 * v50) = *( _OWORD *)&v124[v52].from; 
                                                          ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1623:19: error: expected expression
v122 = *( _OWORD *)&killer1[v92].from; 
                  ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1623:11: error: use of undeclared identifier '_OWORD'
v122 = *( _OWORD *)&killer1[v92].from; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1625:12: error: expected expression
*( _OWORD *)&killer1[v98].from = *( _OWORD *)&killer2[v92].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1625:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer1[v98].from = *( _OWORD *)&killer2[v92].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1625:45: error: expected expression
*( _OWORD *)&killer1[v98].from = *( _OWORD *)&killer2[v92].from; 
                                            ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1625:37: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer1[v98].from = *( _OWORD *)&killer2[v92].from; 
                                    ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1626:12: error: expected expression
*( _OWORD *)&killer2[v98].from = v122; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1626:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer2[v98].from = v122; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1644:19: error: expected expression
v122 = *( _OWORD *)&killer2[v92].from; 
                  ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1644:11: error: use of undeclared identifier '_OWORD'
v122 = *( _OWORD *)&killer2[v92].from; 
          ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1646:12: error: expected expression
*( _OWORD *)&killer2[v102].from = *( _OWORD *)&killer3[v92].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1646:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer2[v102].from = *( _OWORD *)&killer3[v92].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1646:46: error: expected expression
*( _OWORD *)&killer2[v102].from = *( _OWORD *)&killer3[v92].from; 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1646:38: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer2[v102].from = *( _OWORD *)&killer3[v92].from; 
                                     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1647:12: error: expected expression
*( _OWORD *)&killer3[v102].from = v122; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1647:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer3[v102].from = v122; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1658:12: error: expected expression
*( _OWORD *)&killer3[v103].from = *( _OWORD *)&v124[v89].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1658:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer3[v103].from = *( _OWORD *)&v124[v89].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1658:46: error: expected expression
*( _OWORD *)&killer3[v103].from = *( _OWORD *)&v124[v89].from; 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1658:38: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&killer3[v103].from = *( _OWORD *)&v124[v89].from; 
                                     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1675:12: error: expected expression
*( _OWORD *)&pv[0][v68 / 3 + v69 / 0x18].from = *( _OWORD *)&v124[v70].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1675:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[0][v68 / 3 + v69 / 0x18].from = *( _OWORD *)&v124[v70].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1675:60: error: expected expression
*( _OWORD *)&pv[0][v68 / 3 + v69 / 0x18].from = *( _OWORD *)&v124[v70].from; 
                                                           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1675:52: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&pv[0][v68 / 3 + v69 / 0x18].from = *( _OWORD *)&v124[v70].from; 
                                                   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1687:12: error: expected expression
*( _OWORD *)( ( char *)&( *v75)[0].from + v73) = *( _OWORD *)&( *v75)[v74].from; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1687:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&( *v75)[0].from + v73) = *( _OWORD *)&( *v75)[v74].from; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1687:61: error: expected expression
*( _OWORD *)( ( char *)&( *v75)[0].from + v73) = *( _OWORD *)&( *v75)[v74].from; 
                                                            ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/search.c:1687:53: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&( *v75)[0].from + v73) = *( _OWORD *)&( *v75)[v74].from; 
                                                    ^
34 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/search/src/obj/search.o] Error 1
